# sg-news-digest

./: LICENSE  README.md  SKILL.md  pyproject.toml
docs/plans/: 2026-03-04-sg-news-digest-implementation-plan.md  2026-03-04-sg-news-digest-skill-design.md
schemas/: event_clusters.schema.json
scripts/: run.sh
scripts/pipeline/: models.py  report_generator.py  rss_client.py  runner.py  semantic_processor.py
scripts/sources/: __init__.py  straits_times.py
skills/sg-news-digest/: README.md
skills/sg-news-digest/config/: defaults.env
skills/sg-news-digest/scripts/pipeline/: __init__.py  config.py  normalize.py  pre_dedup_filter.py  ranking.py  report_generator.py  source_fetcher.py
skills/sg-news-digest/scripts/sources/: cna.py  google_news.py  zaobao.py
skills/sg-news-digest/templates/: report.md.tmpl
skills/sg-news-digest/tests/: test_config_and_models.py  test_normalize.py  test_pre_dedup_filter.py  test_ranking.py  test_semantic_processor.py  test_smoke.py
tests/: conftest.py  test_degradation_paths.py  test_report_generator.py  test_rss_client.py  test_runner.py  test_source_fetcher.py
